# fast_zero

./: .gitignore  pyproject.toml
fast_zero/: app.py  models.py  schemas.py  settings.py
migrations/: env.py
migrations/versions/: f46f721ba771_create_users_table.py  f8a2108c00ce_version_1_1.py
tests/: _testdb.py  conftest.py  test_app.py
